--- a/Analysis presentation.qmd
+++ b/Analysis presentation.qmd
@@ -159,10 +159,11 @@ d_netstats_first %>%
 match_lst_all <- d_netstats_first %>%
   select(subjectkey_intAge, interview_age,nProduced, group_two) %>%
   unique() %>%
-  matchit(group_two ~ nProduced, data = ., method = "optimal", distance = "glm")
+  matchit(group_two ~ nProduced, data = ., method = "optimal", distance = "glm",ratio = 3)
 
 matched_df_all <- d_netstats_first %>%
-  filter(subjectkey_intAge %in% match.data(match_lst_all)$subjectkey_intAge)
+  filter(subjectkey_intAge %in% match.data(match_lst_all)$subjectkey_intAge) %>%
+  mutate(int_age_cut = cut(interview_age,3))
 
 matched_df_all %>%
   select(subjectkey,nProduced,group_two) %>%
@@ -190,10 +191,13 @@ ggplot(matched_df_all, aes(x = nProduced, , y = interview_age,color = group_two)
 ## Run Linear Models {.smaller .scrollable}
 
 -   Linear models were run regressing
-    $network_{statistic} \sim (linear_{nproduced} + quadratic_{nproduced} +cubic_{nproduced}) * age * group$
+    $network_{statistic} \sim (linear_{nproduced} + quadratic_{nproduced} +cubic_{nproduced})  * group$
 
 -   Number of words produced was re-factored to account for third-order
     polynomial trends in the network statistics
+
+-   No models revealed any group differences in network structure nor
+    interaction with interview age.
 
 ```{r}
 
@@ -213,7 +217,7 @@ matched_df_poly_all <- matched_df_all %>%
 d_splits_all <- split(matched_df_poly_all,matched_df_poly_all$metric)
 
 x <- map(d_splits_all, function(x){
-  lm(z ~ (linear+quadratic+cubic)*interview_age*group_two, data = x)
+  lm(z ~ (linear+quadratic+cubic)*group_two, data = x)
 })
 
 lapply(x, summary)
@@ -231,7 +235,7 @@ ggplot(matched_df_poly_all %>%
   theme_bw(base_size = 24) +
   geom_smooth(method = "lm",
               formula = y ~ poly(x,3))+
-  facet_wrap(~metric_plot)
+  facet_grid(~metric_plot)
 
 
 ```
@@ -251,7 +255,7 @@ ggplot(matched_df_poly_all %>%
 ```{r,echo = TRUE}
 d_WG <- d_netstats %>%
   filter(form == "WG",
-         nProduced >= 3 & nProduced <= 349) %>%
+         nProduced >= 3 & nProduced <= 392) %>%
   group_by(subjectkey) %>%
   slice_min(interview_age,n = 1) %>%
   mutate(group_two = as.factor(ifelse(group == "yng"|group =="mdl", "non_minspeak","minspeak")))
@@ -281,7 +285,7 @@ d_WG %>%
 match_lst <- d_WG %>%
   select(subjectkey_intAge, interview_age,nProduced, group_two) %>%
   unique() %>%
-  matchit(group_two ~ nProduced, data = ., method = "optimal", distance = "glm")
+  matchit(group_two ~ nProduced, data = ., method = "optimal", distance = "glm", ratio = 2)
 
 matched_df <- d_WG %>%
   filter(subjectkey_intAge %in% match.data(match_lst)$subjectkey_intAge)
@@ -315,7 +319,7 @@ ggplot(matched_df, aes(x = nProduced, , y = interview_age,color = group_two))+
 ## Run Linear Models
 
 -   Linear models were run regressing
-    $network_{statistic} \sim (linear_{nproduced} + quadratic_{nproduced} +cubic_{nproduced}) * age* group$
+    $network_{statistic} \sim (linear_{nproduced} + quadratic_{nproduced} +cubic_{nproduced}) * group$
 
 -   Number of words produced was re-factored to account for third-order
     polynomial trends in the network statistics
@@ -338,7 +342,7 @@ ggplot(matched_df, aes(x = nProduced, , y = interview_age,color = group_two))+
     d_splits <- split(matched_df_poly,matched_df_poly$metric)
 
     x <- map(d_splits, function(x){
-      lm(z ~ (linear+quadratic+cubic)*interview_age * group_two, data = x)
+      lm(z ~ (linear+quadratic+cubic) * group_two, data = x)
     })
 
     lapply(x, summary)
