--- a/Analysis presentation.qmd
+++ b/Analysis presentation.qmd
@@ -39,6 +39,7 @@ library(purrr)
 library(MatchIt)
 library(ggh4x)
 library(plotly)
+library(ggraph)
 d_netstats <- read_rds("data/all_Netstats_z_meta.rds") %>%
   mutate(metric_plot = factor(metric, 
                               levels = c("indegreemed","indegreeavg","clustcoef","meandist"),
@@ -55,6 +56,31 @@ d_netstats_nouns <- read_rds("data/all_Netstats_z_meta_nouns.rds")%>%
 d_netstats <- rbind(d_netstats,d_netstats_nouns)
 matched_pps <- read_rds("data/matched_groups_single_timepoint.rds")
 
+load("data/graph_full_nounNet.Rdata")
+load("data/child_oriented_graph.Rdata")
+
+```
+
+## The Graphs {.scrollable .smaller}
+
+-   One set of statistics were computed for a graph of association edges
+
+-   The other was graph of feature edges for 359 nouns
+
+```{r}
+
+ggraph(graph_FullNet, layout = "auto")+
+  geom_edge_link(alpha = 0.2)+
+  geom_node_point(size = 2, colour = "grey") +
+  theme_void() +
+  labs(title = "Association Network Visualization")
+
+
+ggraph(noun_network$graph, layout = "auto")+
+  geom_edge_link(alpha = 0.2)+
+  geom_node_point(size = 2, colour = "grey") +
+  theme_void() +
+  labs(title = "Noun Feature Network Visualization")
 
 
 ```
